--- a/openapi-framework-common/pom.xml
+++ b/openapi-framework-common/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
         <artifactId>openapi-framework</artifactId>
-        <groupId>com.yiji</groupId>
+        <groupId>com.acooly</groupId>
         <version>4.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
