--- a/openapi-framework-core/pom.xml
+++ b/openapi-framework-core/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.yiji</groupId>
+        <groupId>com.acooly</groupId>
         <artifactId>openapi-framework</artifactId>
         <version>4.0.0-SNAPSHOT</version>
     </parent>
@@ -16,17 +16,17 @@
     <dependencies>
 
         <dependency>
-            <groupId>com.yiji</groupId>
+            <groupId>com.acooly</groupId>
             <artifactId>openapi-framework-common</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>com.yiji</groupId>
+            <groupId>com.acooly</groupId>
             <artifactId>openapi-framework-service-persistent</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>com.yiji</groupId>
+            <groupId>com.acooly</groupId>
             <artifactId>openapi-framework-facade</artifactId>
         </dependency>
 
