--- a/openapi-framework-facade/pom.xml
+++ b/openapi-framework-facade/pom.xml
@@ -4,14 +4,14 @@
         xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.yiji</groupId>
+        <groupId>com.acooly</groupId>
         <artifactId>openapi-framework</artifactId>
         <version>4.0.0-SNAPSHOT</version>
     </parent>
     <artifactId>openapi-framework-facade</artifactId>
     <dependencies>
         <dependency>
-            <groupId>com.yiji</groupId>
+            <groupId>com.acooly</groupId>
             <artifactId>openapi-framework-common</artifactId>
         </dependency>
     </dependencies>
