--- a/openapi-framework-nms/pom.xml
+++ b/openapi-framework-nms/pom.xml
@@ -4,7 +4,7 @@
         xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.yiji</groupId>
+        <groupId>com.acooly</groupId>
         <artifactId>openapi-framework</artifactId>
         <version>4.0.0-SNAPSHOT</version>
     </parent>
@@ -13,7 +13,7 @@
     <dependencies>
 
         <dependency>
-            <groupId>com.yiji</groupId>
+            <groupId>com.acooly</groupId>
             <artifactId>openapi-framework-core</artifactId>
         </dependency>
 
