--- a/openapi-framework-service-persistent/pom.xml
+++ b/openapi-framework-service-persistent/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>openapi-framework</artifactId>
-        <groupId>com.yiji</groupId>
+        <groupId>com.acooly</groupId>
         <version>4.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -14,12 +14,12 @@
     <dependencies>
         
         <dependency>
-            <groupId>com.yiji</groupId>
+            <groupId>com.acooly</groupId>
             <artifactId>openapi-framework-domain</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>com.yiji</groupId>
+            <groupId>com.acooly</groupId>
             <artifactId>openapi-framework-service</artifactId>
         </dependency>
 
