--- a/openapi-framework-service-persistent/pom.xml
+++ b/openapi-framework-service-persistent/pom.xml
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>com.acooly</groupId>
             <artifactId>acooly-component-jpa</artifactId>
-            <version>4.0.0-SNAPSHOT</version>
+            <version>${acooly.framework.version}</version>
             <scope>provided</scope>
         </dependency>
 
