--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,16 @@
     <parent>
         <groupId>com.acooly</groupId>
         <artifactId>acooly-parent</artifactId>
-        <version>4.0.0-SNAPSHOT</version>
+        <version>4.1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>com.acooly</groupId>
     <artifactId>openapi-framework</artifactId>
     <version>4.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+    <properties>
+        <acooly.framework.version>4.1.0-SNAPSHOT</acooly.framework.version>
+    </properties>
+
 
     <name>openapi-framework</name>
 
@@ -103,7 +106,7 @@
         <dependency>
             <groupId>com.acooly</groupId>
             <artifactId>acooly-core</artifactId>
-            <version>4.0.0-SNAPSHOT</version>
+            <version>${acooly.framework.version}</version>
         </dependency>
 
         <dependency>
