配置acooly.web.welcomeFile=gateway.do

--- a/openapi-framework-assemble/src/main/resources/application.properties
+++ b/openapi-framework-assemble/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-#\u6570\u636e\u5e93\u914d\u7f6e
+#\u6570\u636E\u5E93\u914D\u7F6E
 acooly.ds.url=jdbc:mysql://127.0.0.1:3306/openapi
 acooly.ds.username=root
 acooly.ds.password=123456
+
+acooly.web.welcomeFile=gateway.do
