--- a/openapi-framework-facade-provider/pom.xml
+++ b/openapi-framework-facade-provider/pom.xml
@@ -16,6 +16,10 @@
             <groupId>com.acooly</groupId>
             <artifactId>openapi-framework-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.acooly</groupId>
+            <artifactId>openapi-framework-facade</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
