--- a/openapi-framework-test/pom.xml
+++ b/openapi-framework-test/pom.xml
@@ -21,7 +21,11 @@
 			<groupId>com.acooly</groupId>
 			<artifactId>openapi-framework-core</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
