--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,12 @@
             <version>3.1.0</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.acooly</groupId>
+            <artifactId>acooly-configuration-processor</artifactId>
+            <version>${acooly.framework.version}</version>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <modules>
