--- a/openapi-framework-assemble/src/main/resources/application.properties
+++ b/openapi-framework-assemble/src/main/resources/application.properties
@@ -2,5 +2,5 @@
 acooly.ds.url=jdbc:mysql://127.0.0.1:3306/openapi1
 acooly.ds.username=root
 acooly.ds.password=123456
-
 acooly.openapi.login.enable=true
+acooly.openapi.login.secretKeyDynamic=true
