增加服务扫描类

--- a/openapi-framework-assemble/src/main/resources/application.properties
+++ b/openapi-framework-assemble/src/main/resources/application.properties
@@ -4,3 +4,5 @@ acooly.ds.username=root
 acooly.ds.password=123456
 acooly.openapi.login.enable=true
 acooly.openapi.login.secretKeyDynamic=true
+
+acooly.ds.slowSqlThreshold=0
