--- a/openapi-framework-service-impl/pom.xml
+++ b/openapi-framework-service-impl/pom.xml
@@ -29,6 +29,12 @@
             <version>${acooly.framework.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.acooly</groupId>
+            <artifactId>acooly-component-mybatis</artifactId>
+            <version>${acooly.framework.version}</version>
+        </dependency>
+
 
     </dependencies>
 
