提交apidoc的整合版本代码结构（未完成）

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
         <module>openapi-framework-service</module>
         <module>openapi-framework-service-impl</module>
         <module>openapi-framework-trafficlimiter</module>
+        <module>openap-iframework-apidoc</module>
     </modules>
 
 </project>
