--- a/openapi-framework-apidoc/pom.xml
+++ b/openapi-framework-apidoc/pom.xml
@@ -44,7 +44,7 @@
         <dependency>
             <groupId>com.acooly</groupId>
             <artifactId>openapi-framework-common</artifactId>
-            <version>5.0.0-SNAPSHOT</version>
+            <version>${acooly.framework.version}</version>
         </dependency>
 
     </dependencies>
