--- a/openapi-framework-test/pom.xml
+++ b/openapi-framework-test/pom.xml
@@ -22,6 +22,13 @@
             <artifactId>openapi-framework-core</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.acooly</groupId>
+            <artifactId>openapi-framework-apidoc</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
