--- a/openapi-framework-apidoc/pom.xml
+++ b/openapi-framework-apidoc/pom.xml
@@ -46,6 +46,11 @@
             <artifactId>openapi-framework-common</artifactId>
             <version>${acooly.framework.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.acooly</groupId>
+            <artifactId>openapi-framework-common</artifactId>
+            <version>5.0.0-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
