完成解析部分

--- a/openapi-framework-assemble/src/main/resources/application.properties
+++ b/openapi-framework-assemble/src/main/resources/application.properties
@@ -6,3 +6,8 @@ acooly.openapi.login.enable=true
 acooly.openapi.login.secretKeyDynamic=true
 
 acooly.ds.slowSqlThreshold=0
+
+
+# apidoc
+acooly.openapi.apidoc.outputTypes[0]=console
+acooly.openapi.apidoc.outputTypes[1]=database
