--- a/openapi-framework-assemble/src/main/resources/application.properties
+++ b/openapi-framework-assemble/src/main/resources/application.properties
@@ -2,12 +2,14 @@
 acooly.ds.url=jdbc:mysql://127.0.0.1:3306/acooly1
 acooly.ds.username=root
 acooly.ds.password=123456
-acooly.openapi.login.enable=true
-acooly.openapi.login.secretKeyDynamic=true
-
 acooly.ds.slowSqlThreshold=0
 
 
-# apidoc
+## openapi
+acooly.openapi.login.enable=true
+acooly.openapi.login.secretKeyDynamic=true
+acooly.openapi.notify.enable=false
+
+## apidoc
 acooly.openapi.apidoc.outputTypes[0]=console
 acooly.openapi.apidoc.outputTypes[1]=database
