--- a/openapi-framework-assemble/src/main/resources/application.properties
+++ b/openapi-framework-assemble/src/main/resources/application.properties
@@ -14,8 +14,8 @@ acooly.openapi.notify.enable=false
 ## apidoc
 acooly.openapi.apidoc.showCommon=true
 
-acooly.openapi.apidoc.outputTypes[0]=console
-acooly.openapi.apidoc.outputTypes[1]=database
+acooly.openapi.apidoc.outputTypes[0]=database
+#acooly.openapi.apidoc.outputTypes[1]=console
 
 ## cms
 #acooly.cms.enable=false
