--- a/openapi-framework-assemble/src/main/resources/application.properties
+++ b/openapi-framework-assemble/src/main/resources/application.properties
@@ -7,7 +7,8 @@ acooly.openapi.login.secretKeyDynamic=true
 
 acooly.ds.slowSqlThreshold=0
 
-
+acooly.dubbo.provider.port=10000
+acooly.dubbo.owner=qiubo
 # apidoc
 acooly.openapi.apidoc.outputTypes[0]=console
 acooly.openapi.apidoc.outputTypes[1]=database
