--- a/openapi-framework-assemble/pom.xml
+++ b/openapi-framework-assemble/pom.xml
@@ -60,6 +60,11 @@
         </dependency>
         <dependency>
             <groupId>com.acooly</groupId>
+            <artifactId>acooly-component-dubbo</artifactId>
+            <version>${acooly.framework.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.acooly</groupId>
             <artifactId>acooly-component-security</artifactId>
             <version>${acooly.framework.version}</version>
         </dependency>
@@ -78,6 +83,7 @@
             <artifactId>spring-web</artifactId>
             <version>4.3.6.RELEASE</version>
         </dependency>
+
     </dependencies>
 
     <build>
