修改实例中的Content-Type

--- a/openapi-framework-assemble/src/main/resources/application.properties
+++ b/openapi-framework-assemble/src/main/resources/application.properties
@@ -4,13 +4,12 @@ acooly.ds.username=root
 acooly.ds.password=123456
 acooly.ds.slowSqlThreshold=0
 acooly.ds.autoCreateTable=true
-
+acooly.dubbo.provider.port=10000
 
 ## openapi
 acooly.openapi.login.enable=true
 acooly.openapi.login.secretKeyDynamic=true
 acooly.openapi.notify.enable=false
-
 ## apidoc
 acooly.openapi.apidoc.showCommon=true
 
