--- a/openapi-framework-assemble/src/main/resources/application.properties
+++ b/openapi-framework-assemble/src/main/resources/application.properties
@@ -5,7 +5,7 @@ acooly.ds.password=123456
 acooly.ds.slowSqlThreshold=0
 acooly.ds.autoCreateTable=true
 acooly.dubbo.provider.port=10000
-
+acooly.dubbo.owner=qiubo
 ## openapi
 acooly.openapi.login.enable=true
 acooly.openapi.login.secretKeyDynamic=true
