--- a/openapi-framework-core/pom.xml
+++ b/openapi-framework-core/pom.xml
@@ -29,7 +29,12 @@
             <groupId>com.acooly</groupId>
             <artifactId>openapi-framework-facade</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>1.8.0.RELEASE</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 
