--- a/openapi-framework-core/pom.xml
+++ b/openapi-framework-core/pom.xml
@@ -38,6 +38,12 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>1.8.0.RELEASE</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>com.acooly</groupId>
             <artifactId>acooly-configuration-processor</artifactId>
             <version>${acooly.framework.version}</version>
