--- a/openapi-framework-apidoc/pom.xml
+++ b/openapi-framework-apidoc/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>openapi-framework</artifactId>
         <groupId>com.acooly</groupId>
-        <version>5.0.0-SNAPSHOT</version>
+        <version>4.2.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -17,7 +17,7 @@
         <dependency>
             <groupId>com.acooly</groupId>
             <artifactId>openapi-framework-core</artifactId>
-            <version>${acooly.framework.version}</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
@@ -31,6 +31,7 @@
             <groupId>com.acooly</groupId>
             <artifactId>acooly-component-mybatis</artifactId>
             <version>${acooly.framework.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
