--- a/openapi-framework-facade/pom.xml
+++ b/openapi-framework-facade/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.acooly</groupId>
         <artifactId>openapi-framework</artifactId>
-        <version>5.0.0-SNAPSHOT</version>
+        <version>4.2.0-SNAPSHOT</version>
     </parent>
     <artifactId>openapi-framework-facade</artifactId>
     <dependencies>
@@ -14,6 +14,7 @@
             <groupId>com.acooly</groupId>
             <artifactId>openapi-framework-common</artifactId>
             <version>${project.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
