--- a/openapi-framework-apidoc/pom.xml
+++ b/openapi-framework-apidoc/pom.xml
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>com.acooly</groupId>
             <artifactId>acooly-component-mybatis</artifactId>
-            <version>${acooly.framework.version}</version>
+            <version>${parent.version}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -42,14 +42,14 @@
         <dependency>
             <groupId>com.acooly</groupId>
             <artifactId>acooly-component-safety</artifactId>
-            <version>${acooly.framework.version}</version>
+            <version>${parent.version}</version>
         </dependency>
 
         <!-- CMS组件 -->
         <dependency>
             <groupId>com.acooly</groupId>
             <artifactId>acooly-component-cms</artifactId>
-            <version>${acooly.framework.version}</version>
+            <version>${parent.version}</version>
         </dependency>
 
     </dependencies>
