--- a/openapi-framework-assemble/pom.xml
+++ b/openapi-framework-assemble/pom.xml
@@ -56,32 +56,27 @@
         <dependency>
             <groupId>com.acooly</groupId>
             <artifactId>acooly-component-jpa</artifactId>
-            <version>${acooly.framework.version}</version>
+            <version>${parent.version}</version>
         </dependency>
         <dependency>
             <groupId>com.acooly</groupId>
             <artifactId>acooly-component-dubbo</artifactId>
-            <version>${acooly.framework.version}</version>
+            <version>${parent.version}</version>
         </dependency>
         <dependency>
             <groupId>com.acooly</groupId>
             <artifactId>acooly-component-security</artifactId>
-            <version>${acooly.framework.version}</version>
+            <version>${parent.version}</version>
         </dependency>
         <dependency>
             <groupId>com.acooly</groupId>
             <artifactId>acooly-component-threadpool</artifactId>
-            <version>${acooly.framework.version}</version>
+            <version>${parent.version}</version>
         </dependency>
         <dependency>
             <groupId>com.acooly</groupId>
             <artifactId>acooly-component-web</artifactId>
-            <version>${acooly.framework.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-            <version>4.3.6.RELEASE</version>
+            <version>${parent.version}</version>
         </dependency>
 
     </dependencies>
