--- a/openapi-framework-service-impl/pom.xml
+++ b/openapi-framework-service-impl/pom.xml
@@ -26,13 +26,13 @@
         <dependency>
             <groupId>com.acooly</groupId>
             <artifactId>acooly-component-jpa</artifactId>
-            <version>${acooly.framework.version}</version>
+            <version>${parent.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.acooly</groupId>
             <artifactId>acooly-component-mybatis</artifactId>
-            <version>${acooly.framework.version}</version>
+            <version>${parent.version}</version>
         </dependency>
 
 
