--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,6 @@
     <artifactId>openapi-framework</artifactId>
     <version>4.2.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <properties>
-        <acooly.framework.version>4.2.0-SNAPSHOT</acooly.framework.version>
-    </properties>
 
 
     <name>openapi-framework</name>
@@ -22,7 +19,7 @@
         <dependency>
             <groupId>com.acooly</groupId>
             <artifactId>acooly-core</artifactId>
-            <version>${acooly.framework.version}</version>
+            <version>${parent.version}</version>
         </dependency>
 
         <dependency>
