--- a/openapi-framework-apidoc/pom.xml
+++ b/openapi-framework-apidoc/pom.xml
@@ -52,6 +52,12 @@
             <version>${parent.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.acooly</groupId>
+            <artifactId>acooly-configuration-processor</artifactId>
+            <version>${parent.version}</version>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 </project>
