--- a/openapi-framework-assemble/pom.xml
+++ b/openapi-framework-assemble/pom.xml
@@ -14,6 +14,7 @@
 
     <properties>
         <deploy.skip>true</deploy.skip>
+        <caffeine.version>2.6.2</caffeine.version>
     </properties>
 
     <dependencies>
