--- a/openapi-framework-assemble/src/main/resources/application.properties
+++ b/openapi-framework-assemble/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 #\u6570\u636E\u5E93\u914D\u7F6E
-acooly.ds.url=jdbc:mysql://127.0.0.1:3306/acooly2
+acooly.ds.url=jdbc:mysql://192.168.1.100:3306/acooly
 acooly.ds.username=root
 acooly.ds.password=123456
 acooly.ds.slowSqlThreshold=0
 acooly.ds.autoCreateTable=true
+
+acooly.dubbo.enable=false
 acooly.dubbo.provider.port=10000
 acooly.dubbo.owner=qiubo
 ## openapi
