--- a/openapi-framework-extensions/pom.xml
+++ b/openapi-framework-extensions/pom.xml
@@ -2,31 +2,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>openapi-framework</artifactId>
         <groupId>com.acooly</groupId>
         <version>4.2.0-SNAPSHOT</version>
     </parent>
-    <artifactId>openapi-framework-trafficlimiter</artifactId>
+    <modelVersion>4.0.0</modelVersion>
 
+    <artifactId>openapi-framework-extensions</artifactId>
     <dependencies>
         <dependency>
             <groupId>com.acooly</groupId>
-            <artifactId>openapi-framework-common</artifactId>
+            <artifactId>openapi-framework-core</artifactId>
             <version>${project.version}</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-redis</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>redis.clients</groupId>
-            <artifactId>jedis</artifactId>
-        </dependency>
-
     </dependencies>
 
 </project>
