--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
         <module>openapi-framework-service-impl</module>
         <module>openapi-framework-trafficlimiter</module>
         <module>openapi-framework-apidoc</module>
+        <module>openapi-framework-extensions</module>
     </modules>
 
 </project>
