--- a/openapi-framework-test/pom.xml
+++ b/openapi-framework-test/pom.xml
@@ -30,6 +30,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.acooly</groupId>
+            <artifactId>acooly-component-test</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <scope>test</scope>
