--- a/openapi-framework-assemble/src/main/resources/application.properties
+++ b/openapi-framework-assemble/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #\u6570\u636E\u5E93\u914D\u7F6E
-acooly.ds.url=jdbc:mysql://127.0.0.1:3306/acooly
+acooly.ds.url=jdbc:mysql://127.0.0.1:3306/openapi-test
 acooly.ds.username=root
 acooly.ds.password=123456
 acooly.ds.slowSqlThreshold=1000
