--- a/openapi-framework-test/src/test/resources/acoolycoder.properties
+++ b/openapi-framework-test/src/test/resources/acoolycoder.properties
@@ -1,7 +1,7 @@
 #[database connection configurations]
 ## [\u5FC5\u586B][mysql]
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/openapi1?useUnicode=true&amp;characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://localhost:3306/openapi-test?useUnicode=true&amp;characterEncoding=UTF-8
 jdbc.username=root
 jdbc.password=123456
 ## [oracle]
@@ -18,10 +18,10 @@ generator.enumName.assemble=false
 # \u6301\u4E45\u5316\u65B9\u6848(\u53EF\u9009: jpa,mybatis)
 generator.persistent.solution=mybatis
 # \u9700\u8981\u751F\u6210\u7684\u53EF\u9009\u6A21\u5757(entity,dao\u548Cservice\u662F\u5FC5\u9009\u7684) \u53EF\u9009: manage,portal,facade,api. \u76EE\u524Dportal,facade\u548Copenapi\u5728\u5F00\u53D1\u4E2D\u4E0D\u53EF\u7528
-generator.modules=service
+generator.modules=service,manage
 
 # \u751F\u6210\u7684\u6A21\u5757\u7684\u7BA1\u7406\u9875\u9762\u6839\u8DEF\u5F84
-generator.manage.path=/manage/module/test
+generator.manage.path=/manage/module/openapi/mock
 # \u751F\u6210\u7684\u6A21\u5757\u7684\u524D\u7AEF\u9875\u9762\u6839\u8DEF\u5F84(\u4F9D\u8D56generator.modules\u4E2D\u6709portal)
 generator.portal.path=/portal/demo
 
