--- a/openapi-framework-core/pom.xml
+++ b/openapi-framework-core/pom.xml
@@ -22,7 +22,11 @@
             <artifactId>openapi-framework-common</artifactId>
             <version>${project.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.acooly</groupId>
+            <artifactId>openapi-framework-client</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <dependency>
             <groupId>com.acooly</groupId>
             <artifactId>openapi-framework-service</artifactId>
