--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
         <module>openapi-framework-apidoc</module>
         <module>openapi-framework-extensions</module>
         <module>openapi-framework-mock</module>
+        <module>openapi-framework-client</module>
     </modules>
 
 </project>
