重构管理后台

--- a/openapi-framework-assemble/src/main/resources/application.properties
+++ b/openapi-framework-assemble/src/main/resources/application.properties
@@ -5,17 +5,17 @@ acooly.ds.password=123456
 acooly.ds.slowSqlThreshold=1000
 acooly.ds.autoCreateTable=true
 
-acooly.dubbo.enable=false
+acooly.dubbo.enable=true
 acooly.dubbo.provider.port=10000
 acooly.dubbo.owner=qiubo
 ## openapi
 acooly.openapi.login.enable=true
 acooly.openapi.login.secretKeyDynamic=true
-acooly.openapi.notify.enable=false
+acooly.openapi.notify.enable=true
 ## apidoc
 acooly.openapi.apidoc.showCommon=true
 
-acooly.openapi.apidoc.outputTypes[0]=database
+#acooly.openapi.apidoc.outputTypes[0]=database
 #acooly.openapi.apidoc.outputTypes[1]=console
 
 ## cms
