fix：apidoc循环解析TreeNode的无限解析BUG，调整为只解析一层

--- a/openapi-framework-assemble/src/main/resources/application.properties
+++ b/openapi-framework-assemble/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 #\u6570\u636E\u5E93\u914D\u7F6E
-acooly.ds.url=jdbc:mysql://127.0.0.1:3306/openapi-test
+acooly.ds.url=jdbc:mysql://127.0.0.1:3306/acooly-openapi
 acooly.ds.username=root
 acooly.ds.password=123456
 acooly.ds.slowSqlThreshold=1000
 acooly.ds.autoCreateTable=true
 
 acooly.dubbo.enable=true
-acooly.dubbo.provider.port=10000
+acooly.dubbo.provider.port=1231
 acooly.dubbo.owner=qiubo
 ## openapi
 acooly.openapi.login.enable=true
@@ -14,8 +14,7 @@ acooly.openapi.login.secretKeyDynamic=true
 acooly.openapi.notify.enable=true
 ## apidoc
 acooly.openapi.apidoc.showCommon=true
-
-#acooly.openapi.apidoc.outputTypes[0]=database
+acooly.openapi.apidoc.outputTypes[0]=database
 #acooly.openapi.apidoc.outputTypes[1]=console
 
 ## cms
