--- a/openapi-framework-assemble/src/main/resources/application.properties
+++ b/openapi-framework-assemble/src/main/resources/application.properties
@@ -1,20 +1,24 @@
 #\u6570\u636E\u5E93\u914D\u7F6E
-acooly.ds.url=jdbc:mysql://127.0.0.1:3306/acooly-openapi
+acooly.ds.url=jdbc:mysql://127.0.0.1:3306/acooly
 acooly.ds.username=root
 acooly.ds.password=123456
 acooly.ds.slowSqlThreshold=1000
 acooly.ds.autoCreateTable=true
 
-acooly.dubbo.enable=true
-acooly.dubbo.provider.port=1231
-acooly.dubbo.owner=qiubo
+acooly.dubbo.enable=false
+acooly.dubbo.provider.port=10000
+acooly.dubbo.owner=acooly
+
 ## openapi
 acooly.openapi.login.enable=true
 acooly.openapi.login.secretKeyDynamic=true
-acooly.openapi.notify.enable=true
+# 是否启动异步通知，需配合dubbo
+acooly.openapi.notify.enable=false
+
 ## apidoc
 acooly.openapi.apidoc.showCommon=true
-acooly.openapi.apidoc.outputTypes[0]=database
+
+#acooly.openapi.apidoc.outputTypes[0]=database
 #acooly.openapi.apidoc.outputTypes[1]=console
 
 ## cms
