--- a/openapi-framework-assemble/src/main/resources/application.properties
+++ b/openapi-framework-assemble/src/main/resources/application.properties
@@ -4,17 +4,18 @@ acooly.ds.username=root
 acooly.ds.password=123456
 acooly.ds.slowSqlThreshold=1000
 acooly.ds.autoCreateTable=true
-## dubbo (acooly.openapi.notify.enableFacade=true,模块依赖)
-acooly.dubbo.enable=true
+## dubbo (acooly.openapi.notify.enableFacade=true,\u6A21\u5757\u4F9D\u8D56)
+acooly.dubbo.enable=false
 acooly.dubbo.provider.enable=true
 acooly.dubbo.provider.port=10000
 acooly.dubbo.owner=acooly
 ## openapi
 acooly.openapi.login.enable=true
 acooly.openapi.login.secretKeyDynamic=true
-# 是否启动异步通知，需配合dubbo
+# \u662F\u5426\u542F\u52A8\u5F02\u6B65\u901A\u77E5\uFF0C\u9700\u914D\u5408dubbo
 acooly.openapi.notify.enable=true
-acooly.openapi.notify.enableFacade=true
+# test: openapi client
+acooly.openapi.client.enable=true
 ## apidoc
 acooly.openapi.apidoc.showCommon=true
 #acooly.openapi.apidoc.outputTypes[0]=database
