--- a/openapi-framework-test/pom.xml
+++ b/openapi-framework-test/pom.xml
@@ -54,6 +54,25 @@
             <version>${project.version}</version>
         </dependency>
 
+        <!-- OpenApi client -->
+        <dependency>
+            <groupId>com.acooly</groupId>
+            <artifactId>openapi-framework-client</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.acooly</groupId>
+            <artifactId>acooly-common</artifactId>
+            <version>4.2.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.acooly</groupId>
+            <artifactId>acooly-common-facade</artifactId>
+            <version>4.2.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>com.acooly</groupId>
