完成跳转服务的修复和测试

--- a/openapi-framework-assemble/src/main/resources/application.properties
+++ b/openapi-framework-assemble/src/main/resources/application.properties
@@ -22,3 +22,5 @@ acooly.openapi.apidoc.showCommon=true
 #acooly.openapi.apidoc.outputTypes[1]=console
 ## cms
 #acooly.cms.enable=false
+# \u6D4B\u8BD5\u6A21\u5757\u4E2D\uFF0C\u5F02\u6B65\u901A\u77E5\u7684\u63A5\u53D7URL\u5FFD\u7565CSRF
+acooly.security.csrf.exclusions.openapi[0]=/openapi/test/client/notifyUrl.html
