--- a/openapi-framework-service-impl/pom.xml
+++ b/openapi-framework-service-impl/pom.xml
@@ -25,6 +25,11 @@
         </dependency>
         <dependency>
             <groupId>com.acooly</groupId>
+            <artifactId>openapi-framework-notify</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.acooly</groupId>
             <artifactId>acooly-component-mybatis</artifactId>
             <version>${parent.version}</version>
         </dependency>
