根据编译器警告，优化部分代码。

--- a/openapi-framework-assemble/src/main/resources/application.properties
+++ b/openapi-framework-assemble/src/main/resources/application.properties
@@ -12,8 +12,29 @@ acooly.dubbo.owner=acooly
 ## openapi
 acooly.openapi.login.enable=true
 acooly.openapi.login.secretKeyDynamic=true
-# \u662F\u5426\u542F\u52A8\u5F02\u6B65\u901A\u77E5\uFF0C\u9700\u914D\u5408dubbo
+## openapi notify
+# [\u53EF\u9009] \u662F\u5426\u542F\u52A8\u5F02\u6B65\u901A\u77E5
 acooly.openapi.notify.enable=true
+# [\u53EF\u9009] \u5F02\u6B65\u901A\u77E5 \u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4
+acooly.openapi.notify.connTimeout=20000
+# [\u53EF\u9009] \u5F02\u6B65\u901A\u77E5 \u8FDE\u8BFB\u53D6\u65F6\u65F6\u95F4
+acooly.openapi.notify.readTimeout=10000
+# [\u53EF\u9009] \u5F02\u6B65\u901A\u77E5 \u901A\u77E5\u7EBF\u7A0B\u6C60\u6838\u5FC3\u5927\u5C0F
+acooly.openapi.notify.threadPool.corePoolSize=10
+# [\u53EF\u9009] \u5F02\u6B65\u901A\u77E5 \u901A\u77E5\u7EBF\u7A0B\u6C60\u6700\u5927\u7EBF\u7A0B\u6570
+acooly.openapi.notify.threadPool.maxPoolSize=50
+# [\u53EF\u9009] \u5F02\u6B65\u901A\u77E5 \u901A\u77E5\u7EBF\u7A0B\u6C60\u961F\u5217\u5927\u5C0F
+acooly.openapi.notify.threadPool.queueCapacity=100
+# [\u53EF\u9009] \u5F02\u6B65\u901A\u77E5 \u901A\u77E5\u7EBF\u7A0B\u540D\u79F0
+acooly.openapi.notify.threadPool.namePrefix=OPENAPI-NOTIFY-TASK
+# [\u53EF\u9009:false] \u63A5\u53D7\u5F02\u6B65\u901A\u77E5\u7684\u63A5\u53E3OpenApiRemoteService\uFF08facade\uFF09\u662F\u5426\u5F00\u542F\u8FDC\u7A0Bdubbo\u670D\u52A1
+# \u9ED8\u8BA4\u4E3Afalse\uFF0C\u8868\u793A\u4E0D\u5F00\u542F\uFF0C\u5219\u4E0D\u66B4\u9732facade\u7684dubbo\u63A5\u53E3\uFF0C\u91C7\u7528\u76F4\u63A5\u672C\u5730spring\u670D\u52A1\u65B9\u5F0F
+acooly.openapi.notify.enableFacade=false
+# [\u53EF\u9009:5] \u5F02\u6B65\u901A\u77E5\u91CD\u53D1\u65F6\uFF0C\u4ECE\u6570\u636E\u5E93\u6BCF\u6B21fetch\u7684\u6570\u91CF
+acooly.openapi.notify.retryFetchSize=10
+# [\u53EF\u9009:120] \u5F02\u6B65\u901A\u77E5\u91CD\u53D1\u542F\u52A8\u95F4\u9694\uFF08\u79D2\uFF09
+acooly.openapi.notify.retryPeriod=120
+
 # test: openapi client
 acooly.openapi.client.enable=true
 ## apidoc
@@ -24,3 +45,5 @@ acooly.openapi.apidoc.showCommon=true
 #acooly.cms.enable=false
 # \u6D4B\u8BD5\u6A21\u5757\u4E2D\uFF0C\u5F02\u6B65\u901A\u77E5\u7684\u63A5\u53D7URL\u5FFD\u7565CSRF
 acooly.security.csrf.exclusions.openapi[0]=/openapi/test/client/notifyUrl.html
+# log
+#acooly.log.level.com.acooly.openapi=DEBUG
