--- a/openapi-framework-assemble/pom.xml
+++ b/openapi-framework-assemble/pom.xml
@@ -100,6 +100,12 @@
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>com.acooly</groupId>
+            <artifactId>acooly-configuration-processor</artifactId>
+            <version>${parent.version}</version>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
