--- a/openapi-framework-notify/pom.xml
+++ b/openapi-framework-notify/pom.xml
@@ -36,5 +36,11 @@
             <version>4.2.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.acooly</groupId>
+            <artifactId>acooly-configuration-processor</artifactId>
+            <version>${parent.version}</version>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 </project>
