编写openapi-framework-client文档

--- a/openapi-framework-assemble/src/main/resources/application.properties
+++ b/openapi-framework-assemble/src/main/resources/application.properties
@@ -37,6 +37,12 @@ acooly.openapi.notify.retryPeriod=120
 
 # test: openapi client
 acooly.openapi.client.enable=true
+acooly.openapi.client.gateway=http://localhost:8089/gateway.do
+acooly.openapi.client.accessKey=test
+acooly.openapi.client.secretKey=06f7aab08aa2431e6dae6a156fc9e0b4
+acooly.openapi.client.showLog=true
+
+
 ## apidoc
 acooly.openapi.apidoc.showCommon=true
 #acooly.openapi.apidoc.outputTypes[0]=database
