--- a/openapi-framework-assemble/src/main/resources/application.properties
+++ b/openapi-framework-assemble/src/main/resources/application.properties
@@ -10,6 +10,21 @@ acooly.dubbo.provider.enable=true
 acooly.dubbo.provider.port=10000
 acooly.dubbo.owner=acooly
 ## openapi
+# \u7F51\u5173\u6027\u80FD\u65E5\u5FD7\u5F00\u5173
+acooly.openapi.enablePerfLog=true
+# \u7F51\u5173\u67E5\u8BE2\u65E5\u5FD7\u662F\u5426\u5206\u6587\u4EF6
+acooly.openapi.queryLogSeparationEnable=false
+# \u7F51\u5173\u662F\u5426\u5728\u5B58\u50A8\u975E\u67E5\u8BE2\u7C7B\u8BF7\u6C42
+acooly.openapi.saveOrder=true
+# \u7F13\u5B58\u914D\u7F6E\uFF08\u79D8\u94A5\u548C\u6743\u9650\uFF09
+acooly.openapi.auth-info-cache.enable=true
+acooly.openapi.auth-info-cache.defaultTimeout=7200000
+# \u7F51\u5173\u533F\u540D\u8BBF\u95EE\u914D\u7F6E\uFF0C\u9ED8\u8BA4\u5F00\u542F\uFF0C\u53EF\u8BBF\u95EE\u767B\u5F55(login)\u63A5\u53E3.
+acooly.openapi.anonymous.enable=true
+acooly.openapi.anonymous.accessKey=anonymous
+acooly.openapi.anonymous.secretKey=anonymouanonymou
+acooly.openapi.anonymous.permissions.login=*:login
+# \u7F51\u5173\u52A8\u6001\u767B\u5F55\u8BA4\u8BC1\u63A5\u53E3\uFF0C\u767B\u5F55\u8BA4\u8BC1\u903B\u8F91\u7531\u76EE\u6807\u9879\u76EE\u5B9E\u73B0com.acooly.openapi.framework.service.service.LoginApiService
 acooly.openapi.login.enable=true
 acooly.openapi.login.secretKeyDynamic=true
 ## openapi notify
@@ -34,18 +49,15 @@ acooly.openapi.notify.enableFacade=false
 acooly.openapi.notify.retryFetchSize=10
 # [\u53EF\u9009:120] \u5F02\u6B65\u901A\u77E5\u91CD\u53D1\u542F\u52A8\u95F4\u9694\uFF08\u79D2\uFF09
 acooly.openapi.notify.retryPeriod=120
-
 # test: openapi client
 acooly.openapi.client.enable=true
 acooly.openapi.client.gateway=http://localhost:8089/gateway.do
 acooly.openapi.client.accessKey=test
 acooly.openapi.client.secretKey=06f7aab08aa2431e6dae6a156fc9e0b4
 acooly.openapi.client.showLog=true
-
-
 ## apidoc
 acooly.openapi.apidoc.showCommon=true
-#acooly.openapi.apidoc.outputTypes[0]=database
+acooly.openapi.apidoc.outputTypes[0]=database
 #acooly.openapi.apidoc.outputTypes[1]=console
 ## cms
 #acooly.cms.enable=false
