修改POM配置，在jar包中包含README.md

--- a/pom.xml
+++ b/pom.xml
@@ -62,4 +62,18 @@
         <module>openapi-framework-notify</module>
     </modules>
 
+
+    <build>
+        <resources>
+            <resource>
+                <directory>.</directory>
+                <includes>
+                    <include>*.md</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
+    </build>
 </project>
