--- a/openapi-framework-test/pom.xml
+++ b/openapi-framework-test/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.acooly</groupId>
         <artifactId>openapi-framework</artifactId>
-        <version>4.2.0-SNAPSHOT</version>
+        <version>4.2.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>openapi-framework-test</artifactId>
@@ -23,61 +23,55 @@
         <dependency>
             <groupId>com.acooly</groupId>
             <artifactId>openapi-framework-core</artifactId>
-            <version>${project.version}</version>
         </dependency>
 
         <!-- OpenApi自动文档 -->
         <dependency>
             <groupId>com.acooly</groupId>
             <artifactId>openapi-framework-apidoc</artifactId>
-            <version>${project.version}</version>
         </dependency>
 
         <!-- 接口MOCK（后台根据接口名称配置mock报文） -->
         <dependency>
             <groupId>com.acooly</groupId>
             <artifactId>openapi-framework-mock</artifactId>
-            <version>${project.version}</version>
         </dependency>
 
         <!-- OpenApi扩展，目前扩展了流控 -->
         <dependency>
             <groupId>com.acooly</groupId>
             <artifactId>openapi-framework-extensions</artifactId>
-            <version>${project.version}</version>
         </dependency>
 
         <!-- OpenApi notify -->
         <dependency>
             <groupId>com.acooly</groupId>
             <artifactId>openapi-framework-notify</artifactId>
-            <version>${project.version}</version>
         </dependency>
 
         <!-- OpenApi client -->
         <dependency>
             <groupId>com.acooly</groupId>
             <artifactId>openapi-framework-client</artifactId>
-            <version>${project.version}</version>
         </dependency>
 
 
         <dependency>
             <groupId>com.acooly</groupId>
             <artifactId>acooly-common</artifactId>
-            <version>4.2.0-SNAPSHOT</version>
+            <version>${acooly.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.acooly</groupId>
             <artifactId>acooly-common-facade</artifactId>
-            <version>4.2.0-SNAPSHOT</version>
+            <version>${acooly.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.acooly</groupId>
             <artifactId>acooly-component-test</artifactId>
-            <version>${project.version}</version>
+            <version>${acooly.version}</version>
         </dependency>
 
         <dependency>
@@ -93,7 +87,7 @@
         <dependency>
             <groupId>com.acooly</groupId>
             <artifactId>acooly-coder</artifactId>
-            <version>4.2.0-SNAPSHOT</version>
+            <version>${acooly.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
