--- a/openapi-framework-mock/pom.xml
+++ b/openapi-framework-mock/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>openapi-framework</artifactId>
         <groupId>com.acooly</groupId>
-        <version>4.2.0-SNAPSHOT</version>
+        <version>4.2.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -13,8 +13,7 @@
     <dependencies>
         <dependency>
             <groupId>com.acooly</groupId>
-            <artifactId>openapi-framework-apidoc</artifactId>
-            <version>${project.version}</version>
+            <artifactId>openapi-framework-core</artifactId>
         </dependency>
     </dependencies>
 
