--- a/pom.xml
+++ b/pom.xml
@@ -9,19 +9,89 @@
         <version>4.2.0-SNAPSHOT</version>
     </parent>
     <artifactId>openapi-framework</artifactId>
-    <version>4.2.0-SNAPSHOT</version>
+    <version>4.2.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
 
     <name>openapi-framework</name>
     <properties>
         <caffeine.version>2.6.2</caffeine.version>
+        <acooly.version>4.2.0-SNAPSHOT</acooly.version>
     </properties>
+
+
+    <dependencyManagement>
+        <dependencies>
+
+            <dependency>
+                <groupId>com.acooly</groupId>
+                <artifactId>openapi-framework-common</artifactId>
+                <version>${parent.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.acooly</groupId>
+                <artifactId>openapi-framework-core</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.acooly</groupId>
+                <artifactId>openapi-framework-service</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.acooly</groupId>
+                <artifactId>openapi-framework-mock</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.acooly</groupId>
+                <artifactId>openapi-framework-test</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.acooly</groupId>
+                <artifactId>openapi-framework-notify</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.acooly</groupId>
+                <artifactId>openapi-framework-extensions</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.acooly</groupId>
+                <artifactId>openapi-framework-facade</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.acooly</groupId>
+                <artifactId>openapi-framework-client</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.acooly</groupId>
+                <artifactId>openapi-framework-apidoc</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+        </dependencies>
+
+    </dependencyManagement>
+
+
     <dependencies>
         <dependency>
             <groupId>com.acooly</groupId>
             <artifactId>acooly-core</artifactId>
-            <version>${parent.version}</version>
+            <version>${acooly.version}</version>
         </dependency>
 
         <dependency>
