--- a/openapi-framework-service/pom.xml
+++ b/openapi-framework-service/pom.xml
@@ -21,7 +21,11 @@
             <artifactId>acooly-component-mybatis</artifactId>
             <version>${acooly.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.acooly</groupId>
+            <artifactId>acooly-component-event</artifactId>
+            <version>${acooly.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
